--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="grid-container" class="grid-container"></div>
 
+    <div id="grid-container" class="grid-container"></div>
+    <div id="slider-container">
+        <input type="range" min="1" max="100" value="16" class="slider" id="slider">
+        <p id="slider-value"></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
